-- MySQL Script generated by MySQL Workbench
-- Corregido para compatibilidad con MariaDB
-- Se eliminó la keyword VISIBLE (no soportada en MariaDB)

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `mydb` DEFAULT CHARACTER SET utf8 ;
USE `mydb` ;

-- -----------------------------------------------------
-- Table `mydb`.`Cuenta`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Cuenta` (
  `usuario` VARCHAR(40) NOT NULL,
  `password` VARCHAR(255) NOT NULL,
  PRIMARY KEY (`usuario`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Cliente`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Cliente` (
  `ci` VARCHAR(20) NOT NULL,
  `nombres` VARCHAR(50) NOT NULL,
  `apPaterno` VARCHAR(20) NOT NULL,
  `apMaterno` VARCHAR(20) NOT NULL,
  `correo` VARCHAR(30) NOT NULL,
  `direccion` VARCHAR(45) NOT NULL,
  `nroCelular` VARCHAR(30) NOT NULL,
  `usuarioCuenta` VARCHAR(40) NOT NULL,
  PRIMARY KEY (`ci`, `usuarioCuenta`),
  INDEX `fk_Cliente_Cuenta1_idx` (`usuarioCuenta`),
  CONSTRAINT `fk_Cliente_Cuenta1`
    FOREIGN KEY (`usuarioCuenta`)
    REFERENCES `mydb`.`Cuenta` (`usuario`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`NotaVenta`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`NotaVenta` (
  `nro` INT NOT NULL,
  `fechaHora` DATETIME NOT NULL,
  `ciCliente` VARCHAR(20) NOT NULL,
  PRIMARY KEY (`nro`),
  INDEX `fk_NotaVenta_Cliente_idx` (`ciCliente`),
  CONSTRAINT `fk_NotaVenta_Cliente`
    FOREIGN KEY (`ciCliente`)
    REFERENCES `mydb`.`Cliente` (`ci`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Industria`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Industria` (
  `cod` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(30) NOT NULL,
  PRIMARY KEY (`cod`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Marca`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Marca` (
  `cod` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(30) NULL,
  PRIMARY KEY (`cod`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Categoria`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Categoria` (
  `cod` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(30) NULL,
  PRIMARY KEY (`cod`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Producto`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Producto` (
  `cod` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `descripcion` VARCHAR(200) NOT NULL,
  `precio` FLOAT NOT NULL,
  `imagen` VARCHAR(200) NOT NULL,
  `estado` VARCHAR(20) NOT NULL,
  `codMarca` INT NOT NULL,
  `codIndustria` INT NOT NULL,
  `codCategoria` INT NOT NULL,
  PRIMARY KEY (`cod`),
  INDEX `fk_Producto_Industria1_idx` (`codIndustria`),
  INDEX `fk_Producto_Marca1_idx` (`codMarca`),
  INDEX `fk_Producto_Categoria1_idx` (`codCategoria`),
  CONSTRAINT `fk_Producto_Industria1`
    FOREIGN KEY (`codIndustria`)
    REFERENCES `mydb`.`Industria` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Producto_Marca1`
    FOREIGN KEY (`codMarca`)
    REFERENCES `mydb`.`Marca` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Producto_Categoria1`
    FOREIGN KEY (`codCategoria`)
    REFERENCES `mydb`.`Categoria` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`DetalleNotaVenta`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`DetalleNotaVenta` (
  `nroNotaVenta` INT NOT NULL,
  `codProducto` INT NOT NULL,
  `item` INT NOT NULL,
  `cant` INT NOT NULL,
  PRIMARY KEY (`nroNotaVenta`, `codProducto`),
  INDEX `fk_NotaVenta_has_Producto_Producto1_idx` (`codProducto`),
  INDEX `fk_NotaVenta_has_Producto_NotaVenta1_idx` (`nroNotaVenta`),
  CONSTRAINT `fk_NotaVenta_has_Producto_NotaVenta1`
    FOREIGN KEY (`nroNotaVenta`)
    REFERENCES `mydb`.`NotaVenta` (`nro`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_NotaVenta_has_Producto_Producto1`
    FOREIGN KEY (`codProducto`)
    REFERENCES `mydb`.`Producto` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Sucursal`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Sucursal` (
  `cod` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(30) NOT NULL,
  `direccion` VARCHAR(100) NOT NULL,
  `nroTelefono` BIGINT NOT NULL,
  PRIMARY KEY (`cod`))
ENGINE = InnoDB;

-- -----------------------------------------------------
-- Table `mydb`.`DetalleProductoSucursal`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`DetalleProductoSucursal` (
  `codProducto` INT NOT NULL,
  `codSucursal` INT NOT NULL,
  `stock` VARCHAR(45) NOT NULL,
  PRIMARY KEY (`codProducto`, `codSucursal`),
  INDEX `fk_Producto_has_Sucursal_Sucursal1_idx` (`codSucursal`),
  INDEX `fk_Producto_has_Sucursal_Producto1_idx` (`codProducto`),
  CONSTRAINT `fk_Producto_has_Sucursal_Producto1`
    FOREIGN KEY (`codProducto`)
    REFERENCES `mydb`.`Producto` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Producto_has_Sucursal_Sucursal1`
    FOREIGN KEY (`codSucursal`)
    REFERENCES `mydb`.`Sucursal` (`cod`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`Vendedor`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mydb`.`Vendedor` (
  `ci` VARCHAR(20) NOT NULL,
  `nombres` VARCHAR(50) NOT NULL,
  `apPaterno` VARCHAR(20) NOT NULL,
  `apMaterno` VARCHAR(20) NOT NULL,
  `correo` VARCHAR(50) NOT NULL,
  `nroCelular` VARCHAR(30) NOT NULL,
  `usuarioCuenta` VARCHAR(40) NOT NULL,
  PRIMARY KEY (`ci`, `usuarioCuenta`),
  INDEX `fk_Vendedor_Cuenta_idx` (`usuarioCuenta`),
  CONSTRAINT `fk_Vendedor_Cuenta`
    FOREIGN KEY (`usuarioCuenta`)
    REFERENCES `mydb`.`Cuenta` (`usuario`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
